turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:5: error: not found: value colorslength
		setCouleurBrosse(colors((i+1)%(colorslength-1)))
                                               ^